# RockBoxIpodSync

./: .gitignore  README.md  __main__.py  convert_album_covers.py  pyproject.toml
rockbox_ipod_sync/: convert_album_covers.py  sync_with_device.py  transcoder.py
